@@ -8,6 +8,7 @@ xine-lib (1.1.2)
   * Patch from SuSE to fix alsa after hardware suspend
   * Fix the ./configure --enable-static-xv parameter
   * Really fix the speed changing race that was mentioned in 1.1.1
+  * Send events for tvtime filmmode changes
 
 xine-lib (1.1.1)
   * Improve sound quality when using alsa 1.0.9 or above.
